--- a/VRChat/60/1166760.html
+++ b/VRChat/60/1166760.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "euxQIXJ48Ug1f0h++0kQEbHHZbUIrSUjY/6qyfx68jU="></script>
+    "LcnhwCUo742Mhvp3kdwfjsCdBZ5sdQW30hwG32D0GLw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat/cluster向け3Dモデル 白音(しろね)","description":"オリジナルっ子の白音(しろね)ちゃんです!!\n\nVRChat・clusterにすぐにアップロードできるように調整してあります!\n\nまた、Blenderファイルを梱包しているので、改変、別用途での使用も可能です!!\n\n内容物\n・Unitypackageファイル(VRChat向け)ポリゴン数:30,421\n・VRMファイル(cluster向け)ポリゴン数:30,421\n・Blenderファイル\n・改変したい人用テクスチャ\n・取り扱い説明書\n\nVRM版はニコニ立体にてご覧いただけます\nhttps://3d.nicovideo.jp/works/td50782\n\nVRoid Hubだと動いてるとこも見れます!!\nhttps://hub.vroid.com/characters/6304583272717756822/models/5120677257262894793","url":"https://booth.pm/ja/items/1166760","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1166760/f180db0c-7d32-4b0b-b26b-0d5cc4dea745_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="euxQIXJ48Ug1f0h++0kQEbHHZbUIrSUjY/6qyfx68jU="></script>
+    nonce="LcnhwCUo742Mhvp3kdwfjsCdBZ5sdQW30hwG32D0GLw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1166760/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1166760/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
