--- a/VRChat/69/1376269.html
+++ b/VRChat/69/1376269.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MqiRZuecaELw6rWtcfODln/T1wMtvqj54aAEtVcsMBQ="></script>
+    "oi3OR7+RYo6fjB6xAHMZfZY69j0mE9GWxdJl/CWcTzU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Crazy Emission v1.0","description":"エミッション系機能が複数搭載されたVRChat向けシェーダーです。\n\nDiffuseテクスチャはライティングされるので、通常のアバター用シェーダーとして利用することも可能です。\n\nバンドル版はEmissive Texture vol.1とのバンドルです。バンドル版は20%オフとなっています。\nhttps://reflex.booth.pm/items/1373458\n\nThis shader is made to be used in VRChat.\nThis shader has some emissive features like emissive scroll.\n","url":"https://booth.pm/ja/items/1376269","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/cbda31cc-ab61-4a8a-900c-882477cd9424/i/1376269/5889946d-cf0e-4a5a-a1f5-352921a8f270_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MqiRZuecaELw6rWtcfODln/T1wMtvqj54aAEtVcsMBQ="></script>
+    nonce="oi3OR7+RYo6fjB6xAHMZfZY69j0mE9GWxdJl/CWcTzU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1376269/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               247
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1376269/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               247
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
