--- a/VRChat/66/1174066.html
+++ b/VRChat/66/1174066.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "e0aSR8Bt5xGt0bCl0NKFnAMAhPd4XsuW8kCrnzer1GY="></script>
+    "khQ9Jo8GrUV2DptVz9TpPew5suWOpaKtYtLKs24a7p8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Multi Badge","description":"「最大で16個のバッジを一つにまとめ、よりスマートにより軽量に！」ハイポリ＆ローポリのバッジ3Dモデル同封しています。\n\n複数のバッジ（画像）を一つのオブジェクト（Material・Mesh）に結合しShaderを使用して切り替えることで軽量化に繋がります。Animation及びAnimatorも使用していません。\n\n同封バッジ3Dモデルポリゴン数\nlow △ 142\nHigh△ 544\n\n※通常版とBoost版の中身は同じものです。違いはありません。","url":"https://booth.pm/ja/items/1174066","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b3160b6b-8c76-4cbb-9a5b-31c80cca3aca/i/1174066/fdbef27c-795d-40a6-8506-e07c141a251c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e0aSR8Bt5xGt0bCl0NKFnAMAhPd4XsuW8kCrnzer1GY="></script>
+    nonce="khQ9Jo8GrUV2DptVz9TpPew5suWOpaKtYtLKs24a7p8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1174066/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               191
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1174066/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               191
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
