--- a/VRChat/07/1172007.html
+++ b/VRChat/07/1172007.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "v0Ykwi4n+MWsfWnlvv4JtVgMM1vj7jRBWbYv58FvQ3Q="></script>
+    "uIG34SmVFHqvHrv4x5bvfgrk4JtlYezTPTGgVpaP6HM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoid用、革ジャンセットアップ","description":"某バーチャルお笑い芸人さん着用の革ジャンセットアップをVRoid用に改変したものです。\n本家の着用モデルとは若干の違いがあります。\nモデルは付属しません。\nブーツは別途出品しています。","url":"https://booth.pm/ja/items/1172007","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/7093a5da-d6d1-4557-b7d9-e2a846dd2b40/i/1172007/df3726d2-9cc1-4356-90da-a80eaec1d53b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v0Ykwi4n+MWsfWnlvv4JtVgMM1vj7jRBWbYv58FvQ3Q="></script>
+    nonce="uIG34SmVFHqvHrv4x5bvfgrk4JtlYezTPTGgVpaP6HM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1172007/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1172007/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
