--- a/VRChat/09/1171409.html
+++ b/VRChat/09/1171409.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tr/0ZjLh0ch9UMSeEK//5uBkny9ad7AgYu8BsdU/h9g="></script>
+    "7mtqILY93t9UoMcdlssdH6tlUzgt5V8KNSjPHVP83ao="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PTRS1941　シモノフ対戦車ライフル","description":"ソ連の対戦車ライフル、PTRS1941のフルスクラッチ3Dモデルです。\n\nそのままの状態、または改変してご利用頂けます。\n\nUnitypackageを同梱しているので、手軽にUnityにインポートしてご使用いただけます。\n\nオブジェクト数: 4(銃本体、クリップ、弾薬、マズルフラッシュ)\nマテリアル数: 2(銃本体・クリップ・弾薬、マズルフラッシュ)\nポリゴン数: 44,792三角面(通常版)、22,774三角面(軽量版)　ともに全オブジェクトの総和\nテクスチャ解像度: 4096x4096\n\nおまけとしてSubstancePainterでレンダリングする際に使えるPBRテクスチャを付けてあります。\n\n■注意事項\n・本モデルはVRChatにて使用できることを確認していますが、ポリゴン数が多い為そのままではアバターの上限ポリゴン数(7万三角面)を超過してしまう場合があります。\nその場合、アニメーションで取り出す等の設定をする必要が発生しますので予めご了承ください。","url":"https://booth.pm/ja/items/1171409","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4100"},"image":"https://booth.pximg.net/c/620x620/39edc5c4-fd37-4865-94df-88cfbc8cbd88/i/1171409/b48057e1-64e7-4873-8de4-26468b0058fe_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tr/0ZjLh0ch9UMSeEK//5uBkny9ad7AgYu8BsdU/h9g="></script>
+    nonce="7mtqILY93t9UoMcdlssdH6tlUzgt5V8KNSjPHVP83ao="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1171409/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1171409/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
