--- a/VRChat/33/1173533.html
+++ b/VRChat/33/1173533.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XQqb8sVM0YQdfOE9tMyZR6C769QKEkJAtQ648UF2WWg="></script>
+    "JzVn4mr1P4YHUgM1l3ysGUfdgJPm/8Tp3MlpxCKVxAE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"九四式 屠龍","description":"注意\nこのアバターはavater2.0環境で制作したものです\nアップデートについては私事の事情により未定となっております\n\nVRchatでの利用を想定した3Dモデルです\n\nポリゴン数 28781\n\n禁止事項の例\n・本モデルの再配布\n・アバターペデステルでの利用\n・publicアバターとしてのアバターアップロード\n・自作発言\n\n　許可事項の例\n・モデルデータの改変\n・商用利用\n\n\n　2019/01/29追記\nver1.01を公開しました\n　更新内容\n・テクスチャ及びメッシュの一部を修正\n・肩のバインダーを外したタイプの差分を追加\n\n 2019/03/26追記\nver1.02を公開しました\n　更新内容\n・強化ユニットの追加\n・それに伴う価格変更　2500→3500\n","url":"https://booth.pm/ja/items/1173533","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/2a4fe492-75d7-49e8-9963-f5be14147ed7/i/1173533/112d3340-9e18-4e26-9d44-eaf08c1fac2f_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XQqb8sVM0YQdfOE9tMyZR6C769QKEkJAtQ648UF2WWg="></script>
+    nonce="JzVn4mr1P4YHUgM1l3ysGUfdgJPm/8Tp3MlpxCKVxAE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1173533/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               136
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1173533/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               136
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
